tests/paczka1/fuzzy1/14424947.err
Error in line 1: SEql2Zz5oPM A820 24,4
Error in line 9: SEql2Zz5oPM A948 11,8
Error in line 26: GGytVkyotnk Al79 32,l
Error in line 14: GGytVkyotnk A879 53,8
Error in line 36: i2e42C A948 91,5
